# Dijkstra

./: CMakeLists.txt  CMakeUserPresets.json  readme.md  vcpkg.json
src/: last_workin.cpp  main.cpp  sdl_all.hpp  sdl_app.hpp  test.css
